--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
       header h1 {
         font-family: "Shadows Into Light", cursive;
         font-size: 5rem;
-        background-color: var(--cream);
         padding: 0.25rem 2rem;
-        border: 2px solid var(--line-light);
+        border: 4px solid var(--line-light);
+        /* border-radius: 10px; */
       }
     </style>
   </head>
