--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       }
 
       header {
-        background-image: url("./people/header.jpg");
+        background-image: url("./people/header.JPG");
         height: 100vh;
         width: 100%;
         background-size: cover;
