feat: updated copy

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       h5 {
         font-size: 1.15rem;
         opacity: 0.7;
+        font-style: italic;
         font-weight: normal;
       }
       p {
@@ -104,6 +105,10 @@
       .card {
         border-top: 2px solid currentColor;
         padding-top: 1rem;
+      }
+
+      .card p {
+        font-size: 1rem;
       }
 
       .img {
@@ -241,43 +246,65 @@
       <div class="wrap">
         <h2>How we work together</h2>
         <p>
-          There aren't fixed roles here. We all help where we can, and we lean
-          into each other's strengths. Some of us design and paint. Some of us
-          build and plan. Some of us tell stories, keep track of things, or
-          remind everyone when it's time for a break.
+          We do have roles here, but they're held lightly. Each of us leans into
+          what we're best at, and steps in wherever the work needs help. Some
+          days that means designing and painting. Other days it's building,
+          planning, telling stories, or keeping things moving.
         </p>
-        <p>The work moves around. That's part of the point.</p>
+        <p>The work shifts between us. That's part of how it stays shared.</p>
 
         <div class="grid">
           <div class="card">
             <div class="img"><img src="./people/jane.jpg" /></div>
             <h4>Jane</h4>
             <h5>Storytelling & Sales</h5>
+            <p>
+              Often telling the story, sharing what we're making, and helping
+              things find their way into the world.
+            </p>
           </div>
           <div class="card">
             <div class="img"><img src="./people/ruby.jpg" /></div>
             <h4>Ruby</h4>
             <h5>Design & Color</h5>
+            <p>
+              Drawn to color, design, and how things look and feel once they're
+              finished.
+            </p>
           </div>
           <div class="card">
             <div class="img"><img src="./people/lucy.jpg" /></div>
             <h4>Lucy</h4>
             <h5>Construction & Counting</h5>
+            <p>
+              Usually building, counting, and making sure things hold together
+              the way they should.
+            </p>
           </div>
           <div class="card">
             <div class="img"><img src="./people/mommy.jpg" /></div>
             <h4>Mommy</h4>
             <h5>Operations & Planning</h5>
+            <p>
+              Keeping things organized, planned, and moving forward with care.
+            </p>
           </div>
           <div class="card">
             <div class="img"><img src="./people/daddy.jpg" /></div>
             <h4>Daddy</h4>
             <h5>Architect & Builder</h5>
+            <p>
+              Designing, building, and helping turn ideas into something solid.
+            </p>
           </div>
           <div class="card">
             <div class="img"><img src="./people/rufus.jpg" /></div>
             <h4>Rufus</h4>
             <h5>Chief Morale Officer</h5>
+            <p>
+              Always nearby, supervising quietly, and reminding everyone to take
+              breaks.
+            </p>
           </div>
         </div>
       </div>
@@ -297,7 +324,7 @@
             rows="4"
             placeholder="Interested in a library, bookmarks, or just following along..."
           ></textarea>
-          <button type="submit">Leave a note</button>
+          <button type="submit">Let's see where this goes</button>
         </form>
       </div>
     </section>
