feat: more copy updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Trois Sœurs — Built together</title>
+    <title>3 Sœurs — Built together</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -191,23 +191,22 @@
         font-size: 5rem;
         padding: 0.25rem 2rem;
         border: 4px solid var(--line-light);
-        /* border-radius: 10px; */
       }
     </style>
   </head>
 
   <body>
     <header>
-      <h1>3 soeurs</h1>
+      <h1>3 sœurs</h1>
     </header>
     <section class="section-dark">
       <div class="wrap">
         <h1>Built together.</h1>
         <p>
-          Trois Sœurs (three sisters) started in a shop built by hand, slowly,
-          with help from friends. It's a family of three daughters, a mom, a
-          dad, and a dog named Rufus, working side by side and figuring things
-          out as we go.
+          3 Sœurs (French for three sisters) started in a shop built by hand,
+          slowly, with help from friends. It's a family of three daughters, a
+          mom, a dad, and a dog named Rufus, working side by side and figuring
+          things out as we go.
         </p>
 
         <p>
