--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       }
 
       button {
-        background-color: var(--ink-soft);
+        background-color: var(--highlight);
         color: var(--cream);
         border: 1px solid currentColor;
         padding: 1rem 1.25rem;
@@ -182,7 +182,7 @@
         align-items: flex-start;
         padding-top: 4rem;
         position: relative;
-        color: var(--ink);
+        color: var(--highlight);
         filter: sepia(20%);
       }
 
@@ -190,7 +190,8 @@
         font-family: "Shadows Into Light", cursive;
         font-size: 5rem;
         padding: 0.25rem 2rem;
-        border: 4px solid var(--line-light);
+        border-bottom: 4px solid var(--line-light);
+        border-top: 4px solid var(--line-light);
       }
     </style>
   </head>
@@ -334,10 +335,10 @@
           working together in some way, you can reach us here.
         </p>
         <form>
-          <input type="email" placeholder="you@example.com" />
+          <input type="text" placeholder="Where we can reach you" />
           <textarea
             rows="4"
-            placeholder="Interested in a library, bookmarks, or just following along..."
+            placeholder="What you're thinking about"
           ></textarea>
           <button type="submit">Let's see where this goes</button>
         </form>
