feat: add two new libraries

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       }
 
       html {
-        background-color: var(--ink);
+        background-color: var(--ink-soft);
       }
 
       body {
-        background-color: var(--ink);
+        background-color: var(--ink-soft);
         margin: 0;
         font-family: "DM Sans", system-ui, sans-serif;
         background: var(--cream);
@@ -239,20 +239,56 @@
           <div class="card">
             <div class="img"><img src="./libraries/after-the-rain.png" /></div>
             <h4>After the Rain</h4>
+            <h5>$300</h5>
+            <p>
+              A small reading shelter that favors quiet, softness, and the
+              feeling of things newly washed.
+            </p>
           </div>
           <div class="card">
             <div class="img"><img src="./libraries/cedar-exchange.png" /></div>
             <h4>The Cedar Exchange</h4>
+            <h5>$300</h5>
+            <p>
+              Built to change. Exposed cedar weathers slowly, fading into a
+              quiet silver-gray as years pass.
+            </p>
           </div>
           <div class="card">
             <div class="img"><img src="./libraries/reading-haven.png" /></div>
-            <h4>Reading Haven</h4>
+            <h4>The Half-Timber Library</h4>
+            <h5>$350</h5>
+            <p>
+              A small reading shelter that feels borrowed from folklore, as if
+              built for gnomes, elves, or other quiet residents.
+            </p>
+          </div>
+          <div class="card">
+            <div class="img"><img src="./libraries/greenhouse.png" /></div>
+            <h4>The Greenhouse</h4>
+            <h5>$400</h5>
+            <p>
+              A place for reading shaped by light, growth, and seasonal change.
+            </p>
           </div>
           <div class="card">
             <div class="img">
               <img src="./libraries/commonwealth-library.png" />
             </div>
             <h4>Commonwealth Library</h4>
+            <h5>$300</h5>
+            <p>
+              Built as a shared civic object, it belongs to the neighborhood
+              through use, care, and continuity.
+            </p>
+          </div>
+          <div class="card">
+            <div class="img"><img src="./libraries/mosshouse.png" /></div>
+            <h4>Mosshouse</h4>
+            <h5>$300</h5>
+            <p>
+              A reading shelter shaped by moisture, softness, and stillness.
+            </p>
           </div>
         </div>
       </div>
